noinst_LIBRARIES = libXimd.a
AM_CFLAGS = -c -O2 -fno-strength-reduce -fno-strict-aliasing
libXimd_a_SOURCES = \
  FrameMgr.c FrameMgr.h i18nAttr.c i18nClbk.c i18nIc.c \
  i18nIMProto.c i18nMethod.c i18nPtHdr.c i18nUtil.c i18nX.c \
  IMConn.c IMdkit.h IMMethod.c IMValues.c Xi18n.h \
  Xi18nTr.h Xi18nX.h XimFunc.h XimProto.h
