xpmdir = $(pkgdatadir)/xpm
xpm_DATA = \
        chnPunc.xpm engPunc.xpm eng.xpm fullcorner.xpm gbk-0.xpm \
        gbk-1.xpm halfcorner.xpm logo.xpm lx-0.xpm lx-1.xpm \
        next.xpm prev.xpm py-0.xpm py-1.xpm py-2.xpm sp-0.xpm \
        sp-1.xpm wb-0.xpm wb-1.xpm wb-2.xpm
EXTRA_DIST = $(xpm_DATA)
