xpmdir = $(pkgdatadir)/xpm
xpm_DATA = about_icon.xpm chnPunc.xpm engPunc.xpm ft-0.xpm ft-1.xpm \
	fullcorner.xpm gbk-0.xpm gbk-1.xpm halfcorner.xpm lock-0.xpm \
	lock-1.xpm logo.xpm lx-0.xpm lx-1.xpm next.xpm prev.xpm vk-1.xpm vk.xpm \
	full-letter.png half-letter.png full-punct.png half-punct.png \
    Ziranma.png PinYin.png Wubi.png Erbi.png CangJie.png \
    Logo.png \
	Jian.png Fan.png Zhong.png Ying.png Lian.png WuLian.png gbk.png gb.png 
EXTRA_DIST = $(xpm_DATA)
