set(FCITX_PNG_FILES
fcitx-cangjie.png
fcitx-chn.png
fcitx-chttrans-active.png
fcitx-chttrans-inactive.png
fcitx-eng.png
fcitx-erbi.png
fcitx-fullwidth-active.png
fcitx-fullwidth-inactive.png
fcitx-legend-active.png
fcitx-legend-inactive.png
fcitx-pinyin.png
fcitx-punc-active.png
fcitx-punc-inactive.png
fcitx-vk-active.png
fcitx-vk-inactive.png
fcitx-wbpy.png
fcitx-wubi.png
fcitx-ziranma.png
fcitx-shuangpin.png
fcitx.png
)

install(FILES ${FCITX_PNG_FILES} DESTINATION ${prefix}/share/pixmaps )
