set(FCITX_DARK_SKIN_FILES
active.png  bingchan.png chnpunc.png  engpunc.png  erbi.png  fcitx_skin.conf  half.png
input.png  legend.png  nolegend.png  quwei.png  vk.png wubi.png wbpy.png ziranma.png
bar.png cangjie.png  cn.png en.png  fan.png  full.png inactive.png  jian.png logo.png
dianbaoma.png novk.png shuangpin.png wanfeng.png pinyin.png prev.png next.png menu.png keyboard.png
)

install(FILES ${FCITX_DARK_SKIN_FILES} DESTINATION share/fcitx/skin/dark)