defaultdir = $(pkgdatadir)/skin/default
default_DATA = active.png  bingchan.png chnpunc.png  engpunc.png  erbi.png  fcitx_skin.conf  half.png \
			   input.png  legend.png  nolegend.png  quwei.png  vk.png wubi.png wbpy.png ziranma.png \
			   bar.png cangjie.png  cn.png en.png  fan.png  full.png inactive.png  jian.png logo.png \
			   dianbaoma.png novk.png shuangpin.png wanfeng.png pinyin.png prev.png next.png keyboard.png menu.png
EXTRA_DIST = $(default_DATA)
